Fix spacing in reservations, spacing of spot profile sidebar

--- a/app/assets/stylesheets/base/nav.scss
+++ b/app/assets/stylesheets/base/nav.scss
@@ -68,6 +68,7 @@
   cursor: pointer;
   text-decoration: none;
   position: relative;
+  color: #575757;
 }
 
 .main-nav-links a:hover {
