--- a/app/assets/stylesheets/components/bookings/trips.scss
+++ b/app/assets/stylesheets/components/bookings/trips.scss
@@ -69,6 +69,7 @@ h1 {
 .trip-city-h1 {
   margin: 27px 0;
   font-size: 36px;
+  color: #484848;
 }
 
 
