--- a/app/assets/stylesheets/components/spots/spot_profile.scss
+++ b/app/assets/stylesheets/components/spots/spot_profile.scss
@@ -273,7 +273,7 @@
 .spot-profile-sidebar {
   width: 30%;
   position: relative;
-  top: -53px;
+  top: -50px;
 }
 
 .spot-profile-price-overlay {
